--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -123,6 +123,7 @@ a:hover, a:active {
 
 #searchbar {
 	float: right;
+	margin-top: .4em;
 }
 /* Nav */
 
@@ -173,6 +174,13 @@ a:hover, a:active {
 
 #content li {
 	margin-bottom: 5px;
+}
+
+/* Form */
+
+.form {
+	display: inline-block;
+	height: 5em;
 }
 
 /* Flash Message */
