--- a/app/views/answers/_answer_form.html.erb
+++ b/app/views/answers/_answer_form.html.erb
@@ -2,9 +2,9 @@
 
 	<%= render 'common/form_errors', object: @answer %>
 
+
 	<p>
-		<%= f.label :body, "Respuesta" %>
-		<%= f.text_field :body %>
+		<%= f.text_field :body, class: 'form' %>
 
 		<%= f.submit "Responde" %>
 	</p>
