--- a/app/views/questions/_question_form.html.erb
+++ b/app/views/questions/_question_form.html.erb
@@ -1,8 +1,8 @@
 <%= form_for(@question) do |f| %>
 	<%= render 'common/form_errors', object: @question %>
 	<p>
-		<%= f.label :body, "Pregunta" %><br />
-		<%= f.text_field :body %>
+	
+		<%= f.text_field :body, class: 'form' %>
 
 		<%= f.submit "Pregunta!" %>
 	</p>
